--- a/Educations.html
+++ b/Educations.html
@@ -17,6 +17,7 @@
 <div class="menu-item"><a href="Experiences.html">Experiences</a></div>
 <div class="menu-item"><a href="Students.html">Students</a></div>
 <div class="menu-item"><a href="Services.html">Services</a></div>
+<div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-category">Links</div>
 <div class="menu-item"><a href="cv/SeyediCV.pdf">My&nbsp;CV</a></div>
 <div class="menu-item"><a href="https://amlteams.github.io">AML&nbsp;Team</a></div>
@@ -30,17 +31,17 @@
 <p><b>Mathematics</b> <br />
 Topics: low-rank matrix factorization, optimization, machine learning<br />
 Thesis title: [TBD] <br />
-Advisors: Prof. Nicolas Gillis and Arnaud Vandaele <br />
+Advisor : Prof. Nicolas Gillis <br />
 <b> <i>University of Mons, Mons, Belgium</i> </b></p>
 <h3><b>Master's Degree</b> (Sep 2015 - Feb 2018) <br /></h3>
 <p><b>Artificial Intelligence</b> <br />
 Topics: semi-supervised learning, multi-label learning, matrix factorization<br />
 Thesis title: "A Graph-based Semi-Supervised Learning Approach for Multi-Label Classification" <br />
-Supervisor: Dr. Parham Moradi &ndash; Advisor : Dr. Fardin Akhlaghian Tab <br />
+Supervisor : Dr. Parham Moradi &ndash; Advisor : Dr. Fardin Akhlaghian Tab <br />
 <b> <i>University of Kurdistan, Sanandaj, Iran</i> </b></p>
 <h3><b>Bachelor's Degree</b> (Jan 2012 - Jun 2014) <br /></h3>
 <p><b>Software Engineering</b> <br />
-Project title: Manufacturing and Setting up a Video Conferencing Software <br />
+Project title : Manufacturing and Setting up a Video Conferencing Software <br />
 <b> <i>Amirkabir Technical College, Arak, Iran</i> </b></p>
 <h3><b>Associate Degree</b> (Jan 2009 - Jun 2011) <br /></h3>
 <p><b>Computer Software</b> <br />
@@ -52,24 +53,4 @@ Project title: Manufacturing and Setting up a Video Conferencing Software <br />
 </tr>
 </table>
 </body>
-
-<!-- Default Statcounter code for Seyedi
-https://amjadseyedi@github.io -->
-<script type="text/javascript">
-var sc_project=12494759; 
-var sc_invisible=1; 
-var sc_security="06ce839b"; 
-</script>
-<script type="text/javascript"
-src="https://www.statcounter.com/counter/counter.js"
-async></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="https://c.statcounter.com/12494759/0/06ce839b/1/"
-alt="Web Analytics"
-referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-<!-- End of Statcounter Code -->
-  
 </html>
-
