--- a/Experiences.html
+++ b/Experiences.html
@@ -17,6 +17,7 @@
 <div class="menu-item"><a href="Experiences.html" class="current">Experiences</a></div>
 <div class="menu-item"><a href="Students.html">Students</a></div>
 <div class="menu-item"><a href="Services.html">Services</a></div>
+<div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-category">Links</div>
 <div class="menu-item"><a href="cv/SeyediCV.pdf">My&nbsp;CV</a></div>
 <div class="menu-item"><a href="https://amlteams.github.io">AML&nbsp;Team</a></div>
@@ -46,24 +47,4 @@
 </tr>
 </table>
 </body>
-
-<!-- Default Statcounter code for Seyedi
-https://amjadseyedi@github.io -->
-<script type="text/javascript">
-var sc_project=12494759; 
-var sc_invisible=1; 
-var sc_security="06ce839b"; 
-</script>
-<script type="text/javascript"
-src="https://www.statcounter.com/counter/counter.js"
-async></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="https://c.statcounter.com/12494759/0/06ce839b/1/"
-alt="Web Analytics"
-referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-<!-- End of Statcounter Code -->
-  
 </html>
-
