--- a/Publications.html
+++ b/Publications.html
@@ -17,6 +17,7 @@
 <div class="menu-item"><a href="Experiences.html">Experiences</a></div>
 <div class="menu-item"><a href="Students.html">Students</a></div>
 <div class="menu-item"><a href="Services.html">Services</a></div>
+<div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-category">Links</div>
 <div class="menu-item"><a href="cv/SeyediCV.pdf">My&nbsp;CV</a></div>
 <div class="menu-item"><a href="https://amlteams.github.io">AML&nbsp;Team</a></div>
@@ -126,40 +127,5 @@
 </td>
 </tr>
 </table>
-
-<!-- core  -->
-	<script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
-	<script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-	<!-- bootstrap 3 affix -->
-	<script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
-	<!-- Owl carousel  -->
-	<script src="assets/vendors/owl-carousel/js/owl.carousel.js"></script>
-	<!-- Ollie js -->
-	<script src="assets/js/Ollie.js"></script>
-	<!-- Statcounter -->
-	<script type="text/javascript">
-		var sc_project=12494759; 
-		var sc_invisible=1; 
-		var sc_security="06ce839b"; 
-	</script>
-	<script type="text/javascript"
-		src="https://www.statcounter.com/counter/counter.js"
-		async></script>
-	<noscript>
-		<div class="statcounter"><a title="Web Analytics"
-			href="https://statcounter.com/" target="_blank"><img
-			class="statcounter"
-			src="https://c.statcounter.com/12494759/0/06ce839b/1/"
-			alt="Web Analytics"></a></div>
-	</noscript>
-<!-- End of Statcounter Code -->
-
 </body>
 </html>
-
-
-
-
-
-
-
