--- a/Services.html
+++ b/Services.html
@@ -17,6 +17,7 @@
 <div class="menu-item"><a href="Experiences.html">Experiences</a></div>
 <div class="menu-item"><a href="Students.html">Students</a></div>
 <div class="menu-item"><a href="Services.html" class="current">Services</a></div>
+<div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-category">Links</div>
 <div class="menu-item"><a href="cv/SeyediCV.pdf">My&nbsp;CV</a></div>
 <div class="menu-item"><a href="https://amlteams.github.io">AML&nbsp;Team</a></div>
@@ -77,8 +78,3 @@
 </table>
 </body>
 </html>
-
-
-
-
-
