--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <div class="menu-item"><a href="Experiences.html">Experiences</a></div>
 <div class="menu-item"><a href="Students.html">Students</a></div>
 <div class="menu-item"><a href="Services.html">Services</a></div>
+<div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-category">Links</div>
 <div class="menu-item"><a href="cv/SeyediCV.pdf">My&nbsp;CV</a></div>
 <div class="menu-item"><a href="https://amlteams.github.io">AML&nbsp;Team</a></div>
@@ -50,9 +51,6 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </ul>
 <h2>News</h2>
 <h3>Upcoming</h3>
-<ul>
-	Honestly, not much, my supervisor thinks I should be writing papers.
-</ul>
 <h3>Recent news</h3>
 <ul>
 <li><p>Our paper, <a href="Semantic">Encoder-Decoder NMF with Kullback-Leibler Divergence</a>, has been accepted for publication in International Journal of Machine Learning and Cybernetics 2025.</p>
@@ -61,7 +59,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </li>
 <li><p>Our paper, &ldquo;<a href="https://arxiv.org/abs/2510.23507">A Deep Latent Factor Graph Clustering with Fairness-Utility Trade-off Perspective</a>&rdquo;, has been accepted  as a regular paper for the 2025 IEEE International Conference on Big Data.</p>
 </li>
-<li><p>Our paper, <a href="https://doi.org/10.1016/j.ins.2025.122823">Distributionally Robust NMF with Self-paced Learning</a>, has been accepted for publication in Information Sciences journal 2026.</p>
+<li><p>Our paper, <a href="https://doi.org/10.1016/j.ins.2025.122823">Distributionally Robust NMF with Self-Paced Learning</a>, has been accepted for publication in Information Sciences journal 2026.</p>
 </li>
 <li><p>My three Master's students successfully defended their theses in Artificial Intelligence at the <a href="https://amlteams.github.io">Algebraic ML Team</a>, University of Kurdistan, September-October 2025.</p>
 </li>
@@ -100,49 +98,5 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </td>
 </tr>
 </table>
-
-<!-- core  -->
-	<script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
-	<script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-	<!-- bootstrap 3 affix -->
-	<script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
-	<!-- Owl carousel  -->
-	<script src="assets/vendors/owl-carousel/js/owl.carousel.js"></script>
-	<!-- Ollie js -->
-	<script src="assets/js/Ollie.js"></script>
-	<!-- Statcounter -->
-	<script type="text/javascript">
-		var sc_project=12494759; 
-		var sc_invisible=1; 
-		var sc_security="06ce839b"; 
-	</script>
-	<script type="text/javascript"
-		src="https://www.statcounter.com/counter/counter.js"
-		async></script>
-	<noscript>
-		<div class="statcounter"><a title="Web Analytics"
-			href="https://statcounter.com/" target="_blank"><img
-			class="statcounter"
-			src="https://c.statcounter.com/12494759/0/06ce839b/1/"
-			alt="Web Analytics"></a></div>
-	</noscript>
-<!-- End of Statcounter Code -->
-
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
