--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </li>
 <li><p>I attended the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/scientific-machine-learning-and-numerical-methods-autumn-school/">Autumn School: Scientific Machine Learning and Numerical Methods</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, October 27-31, 2025.</p>
 </li>
-<li><p>Our paper, &ldquo;<a href="https://arxiv.org/abs/2510.23507">A Deep Latent Factor Graph Clustering with Fairness-Utility Trade-off Perspective</a>&rdquo;, has been accepted  as a regular paper for the 2025 IEEE International Conference on Big Data.</p>
+<li><p>Our paper, &ldquo;<a href="https://arxiv.org/abs/2510.23507">A Deep Latent Factor Graph Clustering with Fairness-Utility Trade-off Perspective</a>&rdquo;, has been accepted for the 2025 IEEE International Conference on Big Data.</p>
 </li>
 <li><p>Our paper, <a href="https://doi.org/10.1016/j.ins.2025.122823">Distributionally Robust NMF with Self-Paced Learning</a>, has been accepted for publication in Information Sciences journal 2026.</p>
 </li>
@@ -129,6 +129,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
   
 </body>
 </html>
+
 
 
 
