--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <h3>Upcoming</h3>
 <h3>Recent news</h3>
 <ul>
+<li><p>Our paper, Community Detection via Deep Motif-regularized Asymmetric NMF, has been accepted for publication in , Engineering Applications of Artificial Intelligence 2026.</p>
+</li>
 <li><p>Our paper, <a href="Semantic">Encoder-Decoder NMF with Kullback-Leibler Divergence</a>, has been accepted for publication in International Journal of Machine Learning and Cybernetics 2025.</p>
 </li>
 <li><p>I attended the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/scientific-machine-learning-and-numerical-methods-autumn-school/">Autumn School: Scientific Machine Learning and Numerical Methods</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, October 27-31, 2025.</p>
@@ -129,6 +131,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
   
 </body>
 </html>
+
 
 
 
