--- a/Publications.html
+++ b/Publications.html
@@ -30,12 +30,21 @@
 <h2>Publications </h2>
 <h3>Preprints</h3>
 <ul>
-<li><p>Community Detection via Deep Motif-Regularized Asymmetric Nonnegative Matrix Factorization
-<br /> H. Sohrabi, <b>A. Seyedi</b>, P. Moradi, and Sh. Esmaeili, [First revision].</p>
+<li><p>Robust Asymmetric Encoder-Decoder Nonnegative Matrix Factorization for Hyperspectral Anomaly Detection
+<br /> S. Moradi, <b>A. Seyedi</b>, W. Barkhoda, and F. Akhlaghian, [First revision].</p>
+</li>
+<li><p>Contrastive Calibration on Consensus and Complementary Multi-View Representations
+<br /> N. Jabari, <b>A. Seyedi</b>, R. Mahmoodi, and F. Akhlaghian, [First revision].</p>
+</li>
+<li><p>Robust log-based multi-label feature selection with dynamic label correlation and relevance–redundancy optimization
+<br /> M. Faraji, <b>A. Seyedi</b>, and F. Akhlaghian, [First revision].</p>
 </li>
 </ul>
 <h3>2026</h3>
 <ul>
+<li><p>Community Detection via Deep Motif-regularized Asymmetric Nonnegative Matrix Factorization &ndash; [<a href="https://github.com/sohrabi94/DMRA-NMF">source code</a>]
+<br /> H. Sohrabi, <b>A. Seyedi</b>, P. Moradi, and S. Esmaeili, Engineering Applications of Artificial Intelligence 2026.</p>
+</li>
 <li><p><a href="https://doi.org/10.1016/j.ins.2025.122823">Distributionally Robust Nonnegative Matrix Factorization with Self-Paced Adaptive Multi-Loss Fusion</a> &ndash; [<a href="https://github.com/barkhoda/DRNMF-SP">source code</a>]
 <br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, Information Sciences 2026.</p>
 </li>
@@ -130,4 +139,5 @@
 </table>
 </body>
 </html>
+
 
