--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-item"><a href="index.html" class="current">Main</a></div>
-<div class="menu-item"><a href="Publications.html">Publications</a></div>
-<div class="menu-item"><a href="Educations.html">Educations</a></div>
-<div class="menu-item"><a href="Experiences.html">Experiences</a></div>
-<div class="menu-item"><a href="Students.html">Students</a></div>
-<div class="menu-item"><a href="Services.html">Services</a></div>
-<div class="menu-item"><a href="Teaching.html">Teaching</a></div>
-<div class="menu-category">Links</div>
-<div class="menu-item"><a href="cv/SeyediCV.pdf">My&nbsp;CV</a></div>
-<div class="menu-item"><a href="https://amlteams.github.io">AML&nbsp;Team</a></div>
+<div class="menu-item"><a href="index.html" class="current">🏠&nbsp;Main</a></div>
+<div class="menu-item"><a href="Publications.html">📚&nbsp;Publications</a></div>
+<div class="menu-item"><a href="Educations.html">🎓&nbsp;Educations</a></div>
+<div class="menu-item"><a href="Experiences.html">💼&nbsp;Experiences</a></div>
+<div class="menu-item"><a href="Students.html">🧑‍🎓&nbsp;Students</a></div>
+<div class="menu-item"><a href="Services.html">🛠️&nbsp;Services</a></div>
+<div class="menu-item"><a href="Teaching.html">📘&nbsp;Teaching</a></div>
+<div class="menu-category">🔗 Links</div>
+<div class="menu-item"><a href="cv/SeyediCV.pdf">📝&nbsp;My&nbsp;CV</a></div>
+<div class="menu-item"><a href="https://amlteams.github.io">👥&nbsp;AML&nbsp;Team</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -29,7 +29,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="photos/bio.png" alt="alt text" width="140px" height="140px" />&nbsp;</td>
-<td align="left"><p>Doctoral researcher,<br /> <a href="https://web.umons.ac.be/maro/en/home/">Mathematics and Operational Research Department</a> <br /><a href="https://web.umons.ac.be/fpms/en/">Faculty of Engineering</a>, <a href="https://web.umons.ac.be/en/">University of Mons (UMONS)</a><br />
+<td align="left"><p>Doctoral researcher<br /> <a href="https://web.umons.ac.be/maro/en/home/">Mathematics and Operational Research Department</a> <br /><a href="https://web.umons.ac.be/fpms/en/">Faculty of Engineering</a>, <a href="https://web.umons.ac.be/en/">University of Mons (UMONS)</a><br />
 Rue de Houdain 9, 7000 Mons, Belgium <br /> 
 Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <a href="https://scholar.google.com/citations?user=gRU1aPYAAAAJ&amp;hl=en">Google Scholar</a>&nbsp;&nbsp;&nbsp;
@@ -37,70 +37,42 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <a href="https://github.com/amjadseyedi">GitHub</a>&nbsp;&nbsp;&nbsp;
 <a href="https://www.linkedin.com/in/AmjadSeyedi/">LinkedIn</a></p>
 </td></tr></table>
-<h2>About me</h2>
+<h2>👤 About me</h2>
 <p>I am currently a Doctoral Researcher in Matrix Theory and Optimization at the <a href="https://web.umons.ac.be/en/">University of Mons</a> under the supervision of <a href="https://sites.google.com/site/nicolasgillis">Prof. Nicolas Gillis</a>. Previously, as a graduate research assistant at the <a href="https://uok.ac.ir/en/">University of Kurdistan</a>, I worked on representation learning with a focus on robustness and generalization. I also led the <a href="https://amlteams.github.io/">Algebraic Machine Learning (AML) team</a>, a group that explores fundamental methods in unsupervised machine learning. I have a Master’s degree in Artificial Intelligence from the same university, where I worked with <a href="https://scholar.google.com/citations?user=BQl2nKsAAAAJ">Dr. Fardin Akhlaghian</a> and <a href="https://scholar.google.com/citations?user=bR5ttrwAAAAJ">Dr. Parham Moradi</a> on matrix factorization and low-rank approximation for various applications such as semi-supervised learning, multi-label classification, and recommendation systems. I also have an Associate and a Bachelor’s degree in Software Engineering.</p>
-<h2>Research interests</h2>
-<ul>
-<li><p><b>Machine Learning:</b> representation learning, deep learning, unsupervised learning  </p>
-</li>
-<li><p><b>Trustworthy ML:</b> robustness, generalization, interpretability, fairness  </p>
-</li>
-<li><p><b>Applications:</b> healthcare, recommender systems, remote sensing  </p>
-</li>
-<li><p><b>Applied Mathematics:</b> linear algebra, optimization, low-rank approximation</p>
-</li>
-</ul>
-<h2>News</h2>
+<h2>🔍 Research interests</h2>
+<p>🧠 <b>Machine Learning:</b> representation learning, deep learning, unsupervised learning  <br />
+🛡️ <b>Trustworthy ML:</b> robustness, generalization, interpretability, fairness  <br />
+🌍 <b>Applications:</b> healthcare, recommender systems, remote sensing  <br />
+🧮 <b>Applied Mathematics:</b> linear algebra, optimization, low-rank approximation</p>
+<h2>📢 News</h2>
 <h3>Upcoming</h3>
 <h3>Recent news</h3>
-<ul>
-<li><p>Our paper, Community Detection via Deep Motif-regularized Asymmetric NMF, has been accepted for publication in , Engineering Applications of Artificial Intelligence 2026.</p>
-</li>
-<li><p>Our paper, <a href="Semantic">Encoder-Decoder NMF with Kullback-Leibler Divergence</a>, has been accepted for publication in International Journal of Machine Learning and Cybernetics 2025.</p>
-</li>
-<li><p>I attended the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/scientific-machine-learning-and-numerical-methods-autumn-school/">Autumn School: Scientific Machine Learning and Numerical Methods</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, October 27-31, 2025.</p>
-</li>
-<li><p>Our paper, &ldquo;<a href="https://arxiv.org/abs/2510.23507">A Deep Latent Factor Graph Clustering with Fairness-Utility Trade-off Perspective</a>&rdquo;, has been accepted for the 2025 IEEE International Conference on Big Data.</p>
-</li>
-<li><p>Our paper, <a href="https://doi.org/10.1016/j.ins.2025.122823">Distributionally Robust NMF with Self-Paced Learning</a>, has been accepted for publication in Information Sciences journal 2026.</p>
-</li>
-<li><p>My three Master's students successfully defended their theses in Artificial Intelligence at the <a href="https://amlteams.github.io">Algebraic ML Team</a>, University of Kurdistan, September-October 2025.</p>
-</li>
-<li><p>I attended the &ldquo;SOCN: <a href="https://sites.uclouvain.be/socn/drupal/socn/node/463">Stochastic variance-reduced optimization algorithms and applications to federated learning</a>&rdquo; course, UCLouvain, Belgium, October 7-9, 2025.</p>
-</li>
-<li><p>I attended the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/453">Systems, Optimization, Control and Networks (SOCN) Workshop</a>, UMONS, Belgium, September 26, 2025.</p>
-</li>
-<li><p>I was on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</p>
-</li>
-<li><p>I attended the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/phd-school-machine-learning-and-optimization/">PhD School: Machine Learning and Optimization</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, September 2-4, 2025.</p>
-</li>
-<li><p>Our paper, <a href="https://doi.org/10.1016/j.patcog.2025.112211">Encoder-Decoder NMF with β-Divergence</a>, has been accepted for publication in Pattern Recognition journal 2026.</p>
-</li>
-<li><p>Our paper, <a href="https://doi.org/10.1016/j.patcog.2025.111732">Instance-wise Distributionally Robust NMF</a>, has been accepted for publication in Pattern Recognition journal 2026. It's my first collaboration with Prof. Nicolas Gillis!</p>
-</li>
-<li><p>I attended the &ldquo;<a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">Learning Theory from First Principles</a>&rdquo; course (<a href="https://www.di.ens.fr/~fbach">Prof. Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.</p>
-</li>
-<li><p>I attended the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: &ldquo;Graphs, Data and AI&rdquo;</a> (<a href="https://cs.stanford.edu/~jure">Prof. Jure Leskovec</a>), University of Antwerp, Belgium, March 20, 2025.</p>
-</li>
-<li><p>I delivered a speech on <a href="https://amjadseyedi.github.io/DeepNMFs.pdf">Deep Matrix Factorizations for Data Representation</a> at the <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium, February 20, 2025.</p>
-</li>
-</ul>
+<p>📰 Our paper, Community Detection via Deep Motif-regularized Asymmetric NMF, has been accepted for publication in , Engineering Applications of Artificial Intelligence 2026.<br />
+📰 Our paper, Semantic Encoder-Decoder NMF with Kullback-Leibler Divergence, has been accepted for publication in International Journal of Machine Learning and Cybernetics 2025.<br /></p>
+<h3>2025</h3>
+<p>🏛️ I attended the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/scientific-machine-learning-and-numerical-methods-autumn-school/">Autumn School: Scientific Machine Learning and Numerical Methods</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, October 27-31, 2025.<br />
+📰 Our paper, &ldquo;<a href="https://arxiv.org/abs/2510.23507">A Deep Latent Factor Graph Clustering with Fairness-Utility Trade-off Perspective</a>&rdquo;, has been accepted  as a regular paper for the 2025 IEEE International Conference on Big Data.<br />
+📰 Our paper, <a href="https://doi.org/10.1016/j.ins.2025.122823">Distributionally Robust NMF with Self-Paced Learning</a>, has been accepted for publication in Information Sciences journal 2026.<br />
+🎓 My three Master's students successfully defended their theses in Artificial Intelligence at the <a href="https://amlteams.github.io">Algebraic ML Team</a>, University of Kurdistan, September-October 2025.<br />
+🏛️ I attended the &ldquo;SOCN: <a href="https://sites.uclouvain.be/socn/drupal/socn/node/463">Stochastic variance-reduced optimization algorithms and applications to federated learning</a>&rdquo; course, UCLouvain, Belgium, October 7-9, 2025.<br />
+🏛️ I attended the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/453">Systems, Optimization, Control and Networks (SOCN) Workshop</a>, UMONS, Belgium, September 26, 2025.<br />
+🏛️ I was on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.<br />
+🏛️ I attended the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/phd-school-machine-learning-and-optimization/">PhD School: Machine Learning and Optimization</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, September 2-4, 2025.<br />
+📰 Our paper, <a href="https://doi.org/10.1016/j.patcog.2025.112211">Encoder-Decoder NMF with β-Divergence</a>, has been accepted for publication in Pattern Recognition journal 2026.<br />
+📰 Our paper, <a href="https://doi.org/10.1016/j.patcog.2025.111732">Instance-wise Distributionally Robust NMF</a>, has been accepted for publication in Pattern Recognition journal 2026. It's my first collaboration with Prof. Nicolas Gillis!<br />
+🏛️ I attended the &ldquo;<a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">Learning Theory from First Principles</a>&rdquo; course (<a href="https://www.di.ens.fr/~fbach">Prof. Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.<br />
+🏛️ I attended the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: &ldquo;Graphs, Data and AI&rdquo;</a> (<a href="https://cs.stanford.edu/~jure">Prof. Jure Leskovec</a>), University of Antwerp, Belgium, March 20, 2025.<br />
+🎤️ I delivered a speech on <a href="https://amjadseyedi.github.io/DeepNMFs.pdf">Deep Matrix Factorizations for Data Representation</a> at the <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium, February 20, 2025.<br /></p>
 <h3>2024</h3>
-<ul>
-<li><p>I attended the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/393">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, UCLouvain, Belgium, October 29, 2024.</p>
-</li>
-<li><p>I attended the <a href="https://alop.uni-trier.de/event/autumn-school-on-constrained-optimization-and-machine-learning/">Autumn School on Constrained Optimization and Machine Learning</a>, Trier University, Germany, October 9-11, 2024.</p>
-</li>
-<li><p>I attended the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>, UCLouvain, Belgium, August 27-30, 2024.</p>
-</li>
-<li><p>My poster was accepted for presentation at the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>.</p>
-</li>
-<li><p>I started my PhD in <a href="https://sites.google.com/site/nicolasgillis/team-members">Matrix Theory and Optimization</a> at Polytech MONS, University of Mons, Belgium, June 18, 2024.</p>
-</li>
-</ul>
+<p>🏛️ I attended the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/393">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, UCLouvain, Belgium, October 29, 2024.<br />
+🏛️ I attended the <a href="https://alop.uni-trier.de/event/autumn-school-on-constrained-optimization-and-machine-learning/">Autumn School on Constrained Optimization and Machine Learning</a>, Trier University, Germany, October 9-11, 2024.<br />
+🏛️ I attended the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>, UCLouvain, Belgium, August 27-30, 2024.<br />
+🏛️ My poster was accepted for presentation at the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>.<br />
+🌱 I started my PhD in <a href="https://sites.google.com/site/nicolasgillis/team-members">Matrix Theory and Optimization</a> at Polytech MONS, University of Mons, Belgium, June 18, 2024.<br /></p>
 </td>
 </tr>
 </table>
+
 
 <!-- core  -->
 	<script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
@@ -131,6 +103,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
   
 </body>
 </html>
+
 
 
 
