--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 📰 Our paper, Semantic Encoder-Decoder NMF with Kullback-Leibler Divergence, has been accepted for publication in International Journal of Machine Learning and Cybernetics 2025.<br /></p>
 <h3>2025</h3>
 <p>🏛️ I attended the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/scientific-machine-learning-and-numerical-methods-autumn-school/">Autumn School: Scientific Machine Learning and Numerical Methods</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, October 27-31, 2025.<br />
-📰 Our paper, &ldquo;<a href="https://arxiv.org/abs/2510.23507">A Deep Latent Factor Graph Clustering with Fairness-Utility Trade-off Perspective</a>&rdquo;, has been accepted  as a regular paper for the 2025 IEEE International Conference on Big Data.<br />
+📰 Our paper, &ldquo;<a href="https://arxiv.org/abs/2510.23507">A Deep Latent Factor Graph Clustering with Fairness-Utility Trade-off Perspective</a>&rdquo;, has been accepted for the 2025 IEEE International Conference on Big Data.<br />
 📰 Our paper, <a href="https://doi.org/10.1016/j.ins.2025.122823">Distributionally Robust NMF with Self-Paced Learning</a>, has been accepted for publication in Information Sciences journal 2026.<br />
 🎓 My three Master's students successfully defended their theses in Artificial Intelligence at the <a href="https://amlteams.github.io">Algebraic ML Team</a>, University of Kurdistan, September-October 2025.<br />
 🏛️ I attended the &ldquo;SOCN: <a href="https://sites.uclouvain.be/socn/drupal/socn/node/463">Stochastic variance-reduced optimization algorithms and applications to federated learning</a>&rdquo; course, UCLouvain, Belgium, October 7-9, 2025.<br />
@@ -103,6 +103,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
   
 </body>
 </html>
+
 
 
 
