--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <h2>🔍 Research interests</h2>
 <p>🧠 <b>Machine Learning:</b> representation learning, deep learning, unsupervised learning  <br />
 🛡️ <b>Trustworthy ML:</b> robustness, generalization, interpretability, fairness  <br />
-🌍 <b>Applications:</b> healthcare, recommender systems, remote sensing  <br />
-🧮 <b>Applied Mathematics:</b> linear algebra, optimization, low-rank approximation</p>
+🧮 <b>Applied Mathematics:</b> linear algebra, optimization, low-rank approximation <br />
+🌍 <b>Applications:</b> healthcare, recommender systems, remote sensing </p>
+
 <h2>📢 News</h2>
 <h3>Upcoming</h3>
 <h3>Recent news</h3>
@@ -103,6 +104,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
   
 </body>
 </html>
+
 
 
 
