--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <h2>📢 News</h2>
 <h3>Upcoming</h3>
 <h3>Recent news</h3>
-<p>📰 Our paper, Community Detection via Deep Motif-regularized Asymmetric NMF, has been accepted for publication in , Engineering Applications of Artificial Intelligence 2026.<br />
+<p>📰 Our paper, <a href="https://doi.org/10.1016/j.engappai.2025.113505">Community Detection via Deep Motif-regularized Asymmetric NMF</a>, has been accepted for publication in , Engineering Applications of Artificial Intelligence 2026.<br />
 📰 Our paper, Semantic Encoder-Decoder NMF with Kullback-Leibler Divergence, has been accepted for publication in International Journal of Machine Learning and Cybernetics 2025.<br /></p>
 <h3>2025</h3>
 <p>🏛️ I attended the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/scientific-machine-learning-and-numerical-methods-autumn-school/">Autumn School: Scientific Machine Learning and Numerical Methods</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, October 27-31, 2025.<br />
@@ -104,6 +104,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
   
 </body>
 </html>
+
 
 
 
