--- a/Publications.html
+++ b/Publications.html
@@ -41,7 +41,7 @@
 </ul>
 <h3>2026</h3>
 <ul>
-<li><p><a href="https://doi.org/10.1016/j.engappai.2025.113505">Community Detection via Deep Motif-regularized Asymmetric NMF</a> &ndash; [<a href="https://github.com/sohrabi94/DMRA-NMF">source code</a>]
+<li><p><a href="https://doi.org/10.1016/j.engappai.2025.113505">Community Detection via Deep Motif-regularized Asymmetric Nonnegative Matrix Factorization</a> &ndash; [<a href="https://github.com/sohrabi94/DMRA-NMF">source code</a>]
 <br /> H. Sohrabi, <b>A. Seyedi</b>, P. Moradi, and S. Esmaeili, Engineering Applications of Artificial Intelligence 2026.</p>
 </li>
 <li><p><a href="https://doi.org/10.1016/j.ins.2025.122823">Distributionally Robust Nonnegative Matrix Factorization with Self-Paced Adaptive Multi-Loss Fusion</a> &ndash; [<a href="https://github.com/barkhoda/DRNMF-SP">source code</a>]
@@ -138,4 +138,5 @@
 </table>
 </body>
 </html>
+
 
