--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <a href="https://www.linkedin.com/in/AmjadSeyedi/">LinkedIn</a></p>
 </td></tr></table>
 <h2>👤 About me</h2>
-<p>I am currently a Doctoral Researcher in Matrix Theory and Optimization at the <a href="https://web.umons.ac.be/en/">University of Mons</a> under the supervision of <a href="https://sites.google.com/site/nicolasgillis">Prof. Nicolas Gillis</a>. Previously, as a graduate research assistant at the <a href="https://uok.ac.ir/en/">University of Kurdistan</a>, I worked on representation learning with a focus on robustness and generalization. I also led the <a href="https://amlteams.github.io/">Algebraic Machine Learning (AML) team</a>, a group that explores fundamental methods in unsupervised machine learning. I have a Master’s degree in Artificial Intelligence from the same university, where I worked with <a href="https://scholar.google.com/citations?user=BQl2nKsAAAAJ">Dr. Fardin Akhlaghian</a> and <a href="https://scholar.google.com/citations?user=bR5ttrwAAAAJ">Dr. Parham Moradi</a> on matrix factorization and low-rank approximation for various applications such as semi-supervised learning, multi-label classification, and recommendation systems. I also have an Associate and a Bachelor’s degree in Software Engineering.</p>
+<p>I am a Doctoral Researcher at the <a href="https://web.umons.ac.be/en/">University of Mons</a>, supervised by <a href="https://sites.google.com/site/nicolasgillis">Prof. Nicolas Gillis</a>. My current research sits at the intersection of Matrix Theory and Optimization, specifically developing matrix factorization and low-rank approximation methods for Trustworthy Machine Learning. I aim to leverage these mathematical tools to enhance robustness, interpretability, and fairness in high-dimensional data and network analysis.
+Previously, I was a Graduate Research Assistant at the <a href="https://uok.ac.ir/en/">University of Kurdistan</a>, where I led the <a href="https://amlteams.github.io/">Algebraic Machine Learning (AML) team</a> and focused on representation learning. I hold an MSc in Artificial Intelligence from the same institution, where my work with <a href="https://scholar.google.com/citations?user=bR5ttrwAAAAJ">Dr. Parham Moradi</a> and <a href="https://scholar.google.com/citations?user=BQl2nKsAAAAJ">Dr. Fardin Akhlaghian</a> focused on matrix factorization for semi-supervised learning and recommender systems. I also hold a Bachelor’s degree in Software Engineering.</p>
 <h2>🔍 Research interests</h2>
 <p>🧠 <b>Machine Learning:</b> representation learning, deep learning, unsupervised learning  <br />
 🛡️ <b>Trustworthy ML:</b> robustness, generalization, interpretability, fairness  <br />
@@ -105,3 +106,4 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
   
 </body>
 </html>
+
