--- a/Publications.html
+++ b/Publications.html
@@ -41,6 +41,9 @@
 </ul>
 <h3>2026</h3>
 <ul>
+<li><p>Encoder-Decoder Symmetric Nonnegative Matrix Tri-Factorization for Graph Clustering&ndash; [<a href="https://github.com/amjadseyedi/ED-SNMTF">source code</a>]
+<br /> <b>A. Seyedi</b> and N. Gillis, International Conference on Acoustics, Speech, and Signal Processing (ICASSP) 2026.</p>
+</li>
 <li><p>Semantic Encoder-Decoder Nonnegative Matrix Factorization with Kullback-Leibler Divergence
 <br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Daneshfar, and F. Akhlaghian, International Journal of Machine Learning and Cybernetics 2026.</p>
 </li>
@@ -138,6 +141,7 @@
 </table>
 </body>
 </html>
+
 
 
 
