--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@ Previously, I was a Graduate Research Assistant at the <a href="https://uok.ac.i
 
 <h2>📢 News</h2>
 <h3>Upcoming</h3>
+	<p>🏛️ I will attend the <a href="https://2026.ieeeicassp.org">International Conference on Acoustics, Speech, and Signal Processing 2026</a>, Barcelona, Spain, May 4-8, 2026.<br /></p>
 <h3>Recent news</h3>
-<p>📰 Our paper, Semantic Encoder-Decoder NMF with Kullback-Leibler Divergence, has been accepted for publication in International Journal of Machine Learning and Cybernetics 2026.<br />
-📰 Our paper, <a href="https://doi.org/10.1016/j.engappai.2025.113505">Community Detection via Deep Motif-regularized Asymmetric NMF</a>, has been accepted for publication in , Engineering Applications of Artificial Intelligence 2026.<br /></p>
+<p>
+📰 Our paper, Encoder-Decoder Symmetric Nonnegative Matrix Tri-Factorization for Graph Clustering, has been accepted for the 2026 International Conference on Acoustics, Speech, and Signal Processing.<br />
+📰 Our paper, Semantic Encoder-Decoder NMF with Kullback-Leibler Divergence, has been accepted for publication in International Journal of Machine Learning and Cybernetics 2026.<br />
+📰 Our paper, <a href="https://doi.org/10.1016/j.engappai.2025.113505">Community Detection via Deep Motif-regularized Asymmetric NMF</a>, has been accepted for publication in , Engineering Applications of Artificial Intelligence 2026.<br />
+</p>
 
 <h3>2025</h3>
 <p>🏛️ I attended the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/scientific-machine-learning-and-numerical-methods-autumn-school/">Autumn School: Scientific Machine Learning and Numerical Methods</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, October 27-31, 2025.<br />
@@ -106,4 +110,5 @@ Previously, I was a Graduate Research Assistant at the <a href="https://uok.ac.i
   
 </body>
 </html>
+
 
