--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Previously, I was a Graduate Research Assistant at the <a href="https://uok.ac.i
 
 <h2>📢 News</h2>
 <h3>Upcoming</h3>
-	<p>🏛️ I will attend the <a href="https://2026.ieeeicassp.org">International Conference on Acoustics, Speech, and Signal Processing 2026</a>, Barcelona, Spain, May 4-8, 2026.<br /></p>
+	<p>🏛️ I will attend the <a href="https://2026.ieeeicassp.org">International Conference on Acoustics, Speech, and Signal Processing (ICASSP) 2026</a>, Barcelona, Spain, May 4-8, 2026.<br /></p>
 <h3>Recent news</h3>
 <p>
 📰 Our paper, Encoder-Decoder Symmetric Nonnegative Matrix Tri-Factorization for Graph Clustering, has been accepted for the 2026 International Conference on Acoustics, Speech, and Signal Processing.<br />
@@ -110,5 +110,6 @@ Previously, I was a Graduate Research Assistant at the <a href="https://uok.ac.i
   
 </body>
 </html>
+
 
 
