--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ Previously, I was a Graduate Research Assistant at the <a href="https://uok.ac.i
 <h2>📢 News</h2>
 <h3>Upcoming</h3>
 	<p>🏛️ I will attend the <a href="https://2026.ieeeicassp.org">2026 International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</a>, Barcelona, Spain, May 4-8, 2026.<br /></p>
+	🏛️ I attended the &ldquo;<a href="https://sites.uclouvain.be/socn/drupal/socn/node/473">SOCN: Identification in Dynamic Networks course</a> (<a href="https://www.pvandenhof.nl">Prof. Paul M.J. Van den Hof</a>)&rdquo;, at the Vrije Universiteit Brussel, Belgium, March 4-6, 2026.<br /></p>
 <h3>Recent news</h3>
 <p>
 📰 Our paper, Encoder-Decoder Symmetric Nonnegative Matrix Tri-Factorization for Graph Clustering, has been accepted for the 2026 International Conference on Acoustics, Speech, and Signal Processing.<br />
@@ -110,6 +111,7 @@ Previously, I was a Graduate Research Assistant at the <a href="https://uok.ac.i
   
 </body>
 </html>
+
 
 
 
