--- a/Publications.html
+++ b/Publications.html
@@ -41,6 +41,9 @@
 </ul>
 <h3>2026</h3>
 <ul>
+<li><p>Contrastive Calibration on Consensus and Complementary Multi-View Representations &ndash; [<a href="https://github.com/neginjabbari/C4MV">source code</a>]
+<br /> N. Jabari, <b>A. Seyedi</b>, R. Mahmoodi, and F. Akhlaghian, Pattern Recognition 2026.</p>
+</li>
 <li><p>Encoder-Decoder Symmetric Nonnegative Matrix Tri-Factorization for Graph Clustering&ndash; [<a href="https://github.com/amjadseyedi/ED-SNMTF">source code</a>]
 <br /> <b>A. Seyedi</b> and N. Gillis, International Conference on Acoustics, Speech, and Signal Processing (ICASSP) 2026.</p>
 </li>
@@ -141,6 +144,7 @@
 </table>
 </body>
 </html>
+
 
 
 
