--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@ Previously, I was a Graduate Research Assistant at the <a href="https://uok.ac.i
 
 <h2>📢 News</h2>
 <h3>Upcoming</h3>
-	<p>🏛️ I will attend the <a href="https://2026.ieeeicassp.org">2026 International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</a>, Barcelona, Spain, May 4-8, 2026.<br />
+	<p>🏛️ I will attend the <a href="https://2026.ieeeicassp.org">International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</a>, Barcelona, Spain, May 4-8, 2026.<br />
 	🏛️ I will attend the &ldquo;<a href="https://sites.uclouvain.be/socn/drupal/socn/node/473">SOCN: Identification in Dynamic Networks course</a> (<a href="https://www.pvandenhof.nl">Prof. Paul M.J. Van den Hof</a>)&rdquo;, at the Vrije Universiteit Brussel, Belgium, March 4-6, 2026.<br /></p>
 <h3>Recent news</h3>
 <p>
 📰 Our paper, Contrastive Calibration on Consensus and Complementary Multi-View Representations, has been accepted for publication in Pattern Recognition 2026.<br />
-📰 Our paper, Encoder-Decoder Symmetric Nonnegative Matrix Tri-Factorization for Graph Clustering, has been accepted for the 2026 International Conference on Acoustics, Speech, and Signal Processing.<br />
+📰 Our paper, Encoder-Decoder Symmetric Nonnegative Matrix Tri-Factorization for Graph Clustering, has been accepted for the International Conference on Acoustics, Speech, and Signal Processing 2026.<br />
 📰 Our paper, Semantic Encoder-Decoder NMF with Kullback-Leibler Divergence, has been accepted for publication in International Journal of Machine Learning and Cybernetics 2026.<br />
 📰 Our paper, <a href="https://doi.org/10.1016/j.engappai.2025.113505">Community Detection via Deep Motif-regularized Asymmetric NMF</a>, has been accepted for publication in , Engineering Applications of Artificial Intelligence 2026.<br />
 </p>
@@ -112,6 +112,7 @@ Previously, I was a Graduate Research Assistant at the <a href="https://uok.ac.i
   
 </body>
 </html>
+
 
 
 
