--- a/Publications.html
+++ b/Publications.html
@@ -53,7 +53,7 @@
 <li><p><a href="https://doi.org/10.1016/j.ins.2025.122823">Distributionally Robust Nonnegative Matrix Factorization with Self-Paced Adaptive Multi-Loss Fusion</a> &ndash; [<a href="https://github.com/barkhoda/DRNMF-SP">source code</a>]
 <br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, Information Sciences 2026.</p>
 </li>
-<li><p><a href="https://doi.org/10.1016/j.patcog.2025.112211">Data Clustering by Encoder-Decoder Nonnegative Matrix Factorization with β-Divergence</a>
+<li><p><a href="https://doi.org/10.1016/j.patcog.2025.112211">Encoder-Decoder Nonnegative Matrix Factorization with β-Divergence for Data Clustering</a>
 <br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Akhlaghian, and F. Daneshfar, Pattern Recognition 2026.</p>
 </li>
 <li><p><a href="https://doi.org/10.1016/j.patcog.2025.111732">Instance-wise Distributionally Robust Nonnegative Matrix Factorization</a>&ndash; [<a href="https://github.com/barkhoda/iDRNMF">source code</a>]
@@ -141,6 +141,7 @@
 </table>
 </body>
 </html>
+
 
 
 
