--- a/Students.html
+++ b/Students.html
@@ -34,19 +34,13 @@
 <tr class="r4"><td class="c1"><b>Student</b></td><td class="c2"><b>Supervisor(s)</b> </td><td class="c3"> <b>Years</b> </td><td class="c4"> <b>Research Topic</b> </td></tr>
 <tr class="r5"><td class="c1"><a href="https://scholar.google.com/citations?hl=en&amp;user=bDDX7RIAAAAJ">Wafa Barkhoda</a></td><td class="c2"> Dr. Akhlaghian </td><td class="c3"> 2022-Present</td><td class="c4"> distributionally robust optimization </td></tr>
 <tr class="r6"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
-<tr class="r7"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
-<tr class="r8"><td class="c1"><b>Master(s)</b> </td><td class="c2"> </td><td class="c3"> </td></tr>
-<tr class="r9"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
-<tr class="r10"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
-<tr class="r11"><td class="c1"><b>Student</b></td><td class="c2"><b>Supervisor(s)</b> </td><td class="c3"> <b>Years</b> </td><td class="c4"> <b>Research Topic</b> </td></tr>
-<tr class="r12"><td class="c1">Zahra Mohsenirad </td><td class="c2"> Dr. Akhlaghian </td><td class="c3"> 2023-Present</td><td class="c4"> hyperspectral unmixing </td></tr>
-<tr class="r13"><td class="c1">
 </td></tr></table>
 <h2>Alumni</h2>
 <table id="TABLENAME">
 <tr class="r1"><td class="c1"><b>Masters</b> </td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r2"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r3"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
+<tr class="r5"><td class="c1">Zahra Mohsenirad </td><td class="c2"> Dr. Akhlaghian </td><td class="c3"> 2023-2026</td><td class="c4"> hyperspectral unmixing </td></tr>
 <tr class="r4"><td class="c1"><b>Student</b></td><td class="c2"><b>Supervisor(s)</b> </td><td class="c3"> <b>Years</b> </td><td class="c4"> <b>Research Topic</b> </td></tr>
 <tr class="r5"><td class="c1">Shirin Moradi</td><td class="c2">Dr. Akhlaghian </td><td class="c3"> 2022-2025</td><td class="c4"> anomaly detection in hyperspectral images </td></tr>
 <tr class="r6"><td class="c1">Sarina Khaledian </td><td class="c2"> Dr. Akhlaghian </td><td class="c3"> 2022-2025</td><td class="c4"> popularity bias, diversity, and fairness in recommendation </td></tr>
@@ -70,4 +64,5 @@
 </table>
 </body>
 </html>
+
 
