--- a/Publications.html
+++ b/Publications.html
@@ -38,8 +38,8 @@
 </ul>
 <h3>2026</h3>
 <ul>
-<li><p>Contrastive Calibration on Consensus and Complementary Multi-View Representations &ndash; [<a href="https://github.com/neginjabbari/C4MV">source code</a>]
-<br /> N. Jabari, <b>A. Seyedi</b>, R. Mahmoodi, and F. Akhlaghian, Pattern Recognition 2026.</p>
+<li><p><a href="https://doi.org/10.1016/j.patcog.2026.113291">Contrastive Calibration on Consensus and Complementary Multi-View Representations</a> &ndash; [<a href="https://github.com/neginjabbari/C4MV">source code</a>]
+  <br /> N. Jabari, <b>A. Seyedi</b>, R. Mahmoodi, and F. Akhlaghian, Pattern Recognition 2026.</p>
 </li>
 <li><p>Encoder-Decoder Symmetric Nonnegative Matrix Tri-Factorization for Graph Clustering&ndash; [<a href="https://github.com/amjadseyedi/ED-SNMTF">source code</a>]
 <br /> <b>A. Seyedi</b> and N. Gillis, International Conference on Acoustics, Speech, and Signal Processing (ICASSP) 2026.</p>
@@ -141,6 +141,7 @@
 </table>
 </body>
 </html>
+
 
 
 
