--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Previously, I was a Graduate Research Assistant at the <a href="https://uok.ac.i
 	🏛️ I will attend the &ldquo;<a href="https://sites.uclouvain.be/socn/drupal/socn/node/473">SOCN: Identification in Dynamic Networks course</a> (<a href="https://www.pvandenhof.nl">Prof. Paul M.J. Van den Hof</a>)&rdquo;, at the Vrije Universiteit Brussel, Belgium, March 4-6, 2026.<br /></p>
 <h3>Recent news</h3>
 <p>
-📰 Our paper, Contrastive Calibration on Consensus and Complementary Multi-View Representations, has been accepted for publication in Pattern Recognition 2026.<br />
+<p>📰 Our paper, <a href="https://doi.org/10.1016/j.patcog.2026.113291">Contrastive Calibration on Consensus and Complementary Multi-View Representations</a>, has been accepted for publication in Pattern Recognition 2026.<br />
 📰 Our paper, Encoder-Decoder Symmetric Nonnegative Matrix Tri-Factorization for Graph Clustering, has been accepted for the International Conference on Acoustics, Speech, and Signal Processing 2026.<br />
 📰 Our paper, Semantic Encoder-Decoder NMF with Kullback-Leibler Divergence, has been accepted for publication in International Journal of Machine Learning and Cybernetics 2026.<br />
 📰 Our paper, <a href="https://doi.org/10.1016/j.engappai.2025.113505">Community Detection via Deep Motif-regularized Asymmetric NMF</a>, has been accepted for publication in , Engineering Applications of Artificial Intelligence 2026.<br />
@@ -112,6 +112,7 @@ Previously, I was a Graduate Research Assistant at the <a href="https://uok.ac.i
   
 </body>
 </html>
+
 
 
 
